Version 1.5.2 (2010-mm-dd):

	* Added support for sending the examination result by email. The
	  emails are multipart encoded (MIME mail with plain text and HTML
	  sections). 
	  
	* Up to three optional attachments (not counting the result PDF) can
	  be attached to the message.

Version 1.5.1 (2010-05-19):

	* Fixed layout of embedded multimedia on question answer page.
	
	* Score board data can now be downloaded in XML format.
	
	* Student codes are now automatic generated if they are missing at
	  registration time.
	
Version 1.5 (2010-05-18):

	* Result from examination can now be exported as PDF/PS/HTML or generated
	  as batch jobs using admin/result.pdf. If multiple examinations is
	  exported, then caller receives them in a zip-file.
	  
	* The score board data can be downloaded as CSV/TSV (comma- resp. tab 
	  separated data) or XML for processing in a spread sheet application.
	  
	* Common names for all system users (teachers) and students are now looked
	  up in the LDAP directory.

Version 1.4 (2010-05-11):

	* It's now possible to utilize and correct answers to multiple and
	  single choice questions in examinations.
	
	* Implemented auto correction answers for multi and single choice
	  questions, with possibility for the corrector to override the 
	  calculated score.

	* Multimedia files defined for questions is now shown on the right
	  hand side, embedded in HTML and using browser plugins (flash,
	  quicktime, windows media and real player). Supports video, audio 
	  and images.

	* The VLC media player plugin (see http://www.videolan.org) is now
	  supported using a javascript controller interface.
	  
	* System managers can override the builtin media content hanling to
	  choose which media player to handle all or specific content types,
	  see docs/README-MPLAYER for more information.

Version 1.3 (2010-05-05):

	* Added examinator page where the user granted this role can
	  add/remove users and reschedule the examination.
	  